--- a/sitio sena/bandera.css
+++ b/sitio sena/bandera.css
@@ -1,3 +1,4 @@
+
 *{
     box-sizing: border-box;
 }
@@ -69,12 +70,11 @@ footer{
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    position: fixed;
-    bottom: 0;
-    left: 0;
+    position: absolute;
 }
 
-/*bandera*/
+
+
 @media (min-width: 720px){
     header{
         position: fixed;
@@ -123,6 +123,5 @@ footer{
     footer{
         justify-content:flex-end;
     }
-
 
 }
