--- a/sitio sena/himno.css
+++ b/sitio sena/himno.css
@@ -74,9 +74,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    position: fixed;
-    bottom: 0;
-    left: 0;
+    position: absolute;
 }
 
 @media (min-width: 720px){
