--- a/sitio sena/logo.css
+++ b/sitio sena/logo.css
@@ -67,10 +67,9 @@ footer {
     height: 40px;
     width: 100%;
     display: flex;
-    justify-content:flex-end;
-    position: fixed;
-    bottom: 0;
-    left: 0;
+    justify-content: center;
+    align-items: flex-end;
+    position: absolute;
 
 }
 
