--- a/sitio sena/escudo.css
+++ b/sitio sena/escudo.css
@@ -16,7 +16,7 @@ p{ font-size: 1.2em;}
 }
 
 header{
-    background-color: #6CB52B;
+    background-color: #39a900;
 }
 
 header .logo{
@@ -63,13 +63,14 @@ p{
 }
 
 footer {
-    background-color: #6CB52B;
+    background-color: #39a900;
     height: 40px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: flex-end;
     position: absolute;
+
 }
 
 @media (min-width: 720px){
@@ -119,6 +120,9 @@ footer {
 
     footer {
         justify-content: flex-end;
+        position: absolute;
+        bottom:0%;
+
 
     }
 
