--- a/sitio sena/himno.css
+++ b/sitio sena/himno.css
@@ -17,7 +17,7 @@ b{font-size: 1em;}
 }
 
 header{
-    background-color: #6CB52B;
+    background-color: #39a900;
 }
 
 header .logo{
@@ -68,7 +68,7 @@ p{
 }
 
 footer {
-    background-color: #6CB52B;
+    background-color: #39a900;
     height: 40px;
     width: 100%;
     display: flex;
@@ -124,6 +124,8 @@ footer {
 
     footer {
         justify-content: flex-end;
+        position: absolute;
+        
 
     }
 
