--- a/sitio sena/logo.css
+++ b/sitio sena/logo.css
@@ -16,7 +16,7 @@ p{ font-size: 1.2em;}
 }
 
 header{
-    background-color: #6CB52B;
+    background-color: #39a900;
 }
 
 header .logo{
@@ -63,7 +63,7 @@ p{
 }
 
 footer {
-    background-color: #6CB52B;
+    background-color: #39a900;
     height: 40px;
     width: 100%;
     display: flex;
@@ -120,6 +120,8 @@ footer {
 
     footer{
         justify-content: flex-end;
+        position: absolute;
+        bottom: 0%;
 
     }
 
