--- a/sitio sena/escudo.css
+++ b/sitio sena/escudo.css
@@ -98,7 +98,7 @@ footer {
     }
 
     #Escudo .img-container{
-        background-image:url(media/escudo.png);
+        background-image:url(MEDIA/escudo.png); /*img sacada de google*/
         background-size: cover;
         background-position: center center;
         width: 50%;
